fix action button alignment in admin articles index

--- a/src/app.css
+++ b/src/app.css
@@ -275,6 +275,11 @@ input[type="file"]::file-selector-button,
 	max-width: 500px;
 }
 
+.height-100 {
+	height: 100%;
+	max-height: 100%;
+}
+
 /*****************************************************
 ******************************************************
 	PADDING RULES
@@ -742,6 +747,8 @@ input[type="file"]::file-selector-button,
 	box-shadow: 0px 3px 8px -2px rgba(50, 50, 50, 0.5);
 	border-radius: 0.5rem;
 	overflow: hidden;
+	display: flex;
+	flex-direction: column;
 }
 
 .raised {
